initial github commit

--- a/config/.env
+++ b/config/.env
@@ -1,2 +1,2 @@
 PORT = 2121
-DB_STRING = mongodb+srv://demo:demo@cluster0.hcds1.mongodb.net/todos?retryWrites=true&w=majority
+DB_STRING = mongodb+srv://TwentyBowls:2zgdcWaY56DrsNOf@twenty.nt6tt6z.mongodb.net/?retryWrites=true&w=majority
