--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "todo-mvc-auth-local",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -14,7 +14,7 @@
     "connect-mongo": "^3.2.0",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
-    "express": "^4.17.1",
+    "express": "^4.18.1",
     "express-flash": "^0.0.2",
     "express-session": "^1.17.1",
     "mongodb": "^3.6.5",
