--- a/config/.env
+++ b/config/.env
@@ -1,2 +1,3 @@
 PORT = 2121
 DB_STRING = mongodb+srv://TwentyBowls:2zgdcWaY56DrsNOf@twenty.nt6tt6z.mongodb.net/?retryWrites=true&w=majority
+API_KEY = <api-key>
